@@ -29,4 +29,24 @@
 			<artifactId>dawdler-load-bean</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>17</source>
+					<target>17</target>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.loader=dawdler.server.plug</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project> 
